--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,7 +8,7 @@ message.filter.accessClosed=Access closed! You are trying to cross an inaccessib
 message.filter.accessClosedUserNull=Access closed! You are not authorized.
 message.dataIsNotCorrect=Data isn't correct!
 ############# Header #############
-text.header.fitnesscenter=Fitness club
+text.header.fitnesscenter=Fitness center
 text.header.trainerlist=Trainers
 text.header.contacts=Contacts
 text.header.mycabinet=My cabinet
@@ -196,7 +196,7 @@ text.contacts.sendto=Send to:
 text.contacts.subject=Subject:
 text.contacts.messagetext=Message text
 text.contacts.send.message=Send message!
-text.contacts.address=Address: 51, Independence Avenue, Minsk
+text.contacts.address=Address: 100, Independence Avenue, Minsk
 text.contacts.email=For all questions, contact the fitness center by mail: fitness.center.epam@gmail.com
 messages.mailsentsuccessfully=Mail sent successfully.
 ############# Page All Info #############
@@ -215,25 +215,52 @@ text.allinfo.costperoneworkout=Cost per one workout
 ############# Page reviews #############
 title.reviews=Reviews
 text.reviews.reviews = Reviews
-text.reviews.reviews1 = Our customer reviews
 text.reviews.id = id
 text.reviews.text = Text
 text.reviews.name = Name
 text.reviews.send.message = Send message!
 radio.reviews.client=Client
 text.reviewlist.id = id
-text.reviews.firstname = Name
 text.reviewslist.name = Name
-text.reviews.reviewstext = Message review
-text.reviews.send.review= Leave feedback!
-bt.review.signup=Sign up
-title.reviewList = reviewList
-text.reviewList.reviewList = reviewList
-text.reg.rev=Write review
-text.reg.rev.id = id
-text.reg.rev.message = message
+text.reg.rev= Write review
+text.reg.rev.id = ID
+text.reg.rev.message = Message
 bt.reg.rev.add = Leave review!
+table.client.text.help.leave.review = In order to leave a review to a trainer, you need to indicate his (her) ID, write a review and send. You can clarify the ID of the trainer by clicking on the tab below "Go to the list of trainers".
+text.reg.id_help = Enter the ID of the trainer about whom you want to leave a review. (If you want to leave feedback on your behalf, enter your ID)
+text.reg.message_help = It can contain up to 280 letters, spaces, punctuation marks.
+href.trainer.list.for.review = Go to the list of trainers
 ############# Page gallery #############
 text.header.gallery = Gallery
 text.gallery.welcome = Photo gallery
 text.gallery.slideshow = Press image switch buttons
+############# Page hall presentation #############
+text.header.hall = Hall presentation
+############# Page food #############
+title.food = Fitness nutrition
+text.header.food = Competent fitness: nutrition before and after training
+text.helper.food = How to start eating properly:
+text.advice.information = Proper nutrition is one of the topics most commonly asked by ordinary people. A balanced diet can work wonders for your body. It is no secret that training alone is not enough to correct a figure. For the result, you need to correctly review your diet.
+text.advice.information1 = 1. In the morning on an empty stomach, drink a glass (you can 2 glasses) of warm water.
+text.advice.information2 = 2. After 10-15 minutes we have breakfast (breakfast - scrambled eggs, fried eggs, cereals - this is a charge of energy for the whole day, especially flax and oatmeal). Overloading the stomach with sandwiches, pies is not recommended.
+text.advice.information3 = 3. Each time, 10-20 minutes before a meal, drink a glass of water (most often the body "asks" not for food, but for water), besides, after drinking water, we will clear the stomach of the remnants of the previous meal).
+text.advice.information4 = 4. There are often, but in small portions (we get up from the table with a feeling of slight malnutrition - so the stomach will gradually decrease in size and over time will "ask" less).
+text.advice.information5 = 5. A break between food and snacks for 2-3 hours.
+text.advice.information6 = 6. Drink with food, but not very much. Drinking plenty is recommended after about an hour.
+text.advice.information7 = 7. You can eat after 6 pm! But the last meal should be 2-3 hours before bedtime.
+text.advice.information8 = 8. Add more vegetables, berries, fruits to the diet (but reduce the consumption of sweet and starchy foods, and it is better to exclude them altogether). Eat at least 1 apple every day - cleanses the body of toxins and poisons.
+text.advice.information9 = 9. Eat 1-2 hours before training (it’s good if they are easily digestible carbohydrates - cereals - they give the energy that is so needed during training).
+text.advice.information10 = 10. After training, it is better to eat in half an hour, and immediately after it you can drink protein.
+text.advice.information11 = 11. Eat animal protein (for lunch, dinner): white meat - poultry, seafood: slightly salted fish, baked or steamed (but not fried or smoked), chicken eggs. Pork is undesirable because she is oily.
+text.advice.information12 = 12. Eat vegetable protein: beans, peas, beans, nuts.
+text.advice.information13 = 13. Eat fats: dairy products (it is better if they are farmers), vegetable oils (the most useful - flaxseed), as well as mustard, hemp, sesame, cedar, corn, soy, olive, vegetable (unrefined) and other oils. Add these oils to salads, instead of mayonnaise. Store oil in the refrigerator is undesirable (except for flaxseed).
+text.advice.information14 = 14. Eat carbohydrates: cereals, pasta (from durum wheat), cocoa, chicory, honey.
+text.advice.information15 = 15. It is undesirable to eat soup and the main course in a row, it is better to divide into two meals.
+text.advice.information16 = 16. Eat boiled, stewed, steamed, baked or grilled food. The utility is better preserved in this way.
+text.advice.information17 = 17. Drink 1.5-2 liters per day. water (better filtered).
+text.advice.information18 = 18. Do not abuse coffee (cons: it does not allow the protein to be absorbed, "plant" vision and heart, teeth turn yellow). You can replace with natural cocoa, chicory (similar to coffee, but healthier).
+text.advice.information19 = 19. For colds, acute respiratory infections, acute respiratory viral infections, there are fruits with vitamin C: blackcurrant, kiwi, citrus fruits and drink as much liquid as possible. For immunity: echinacea, badger fat in capsules, mummy. If possible, do not drink antibiotics (weakens immunity, dysfunction of the stomach and intestines).
+text.advice.information20 = 20. Do not eat or drink (especially hot) from disposable plastic utensils - emits poisons.
+text.advice.information21 = 21. If possible, do not combine proteins with many simple carbohydrates: meat and bread, dumplings.
+text.advice.information22 = 22. To minimize, and it is better to exclude completely confectionery - pastries, condensed milk, sweets. If you are attracted to sweets, eat fruit or some honey.
+text.advice.information23 = 23. The most harmful products: sausage, mayonnaise, ketchup and all kinds of sauces, any soda, chips and crackers, fast food, sweets, ice cream.
