--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -194,7 +194,7 @@ text.contacts.sendto=Senden an:
 text.contacts.subject=Gegenstand:
 text.contacts.messagetext=Nachrichtentext
 text.contacts.send.message=Nachricht senden!
-text.contacts.address=Adresse: 51, Independence Avenue, Minsk
+text.contacts.address=Adresse: 100, Independence Avenue, Minsk
 text.contacts.email=Bei allen Fragen wenden Sie sich per E-Mail an das Fitnesscenter: fitness.center.epam@gmail.com
 messages.mailsentsuccessfully=Mail erfolgreich gesendet.
 ############# Page All Info #############
@@ -210,7 +210,55 @@ text.allinfo.email=Email
 text.allinfo.discount=Rabatt
 text.allinfo.education=Bildung
 text.allinfo.costperoneworkout=Kosten pro Training
+############# Page reviews #############
+title.reviews= Bewertungen
+text.reviews.reviews = Bewertungen
+text.reviews.id = id
+text.reviews.text = Text
+text.reviews.name = Name
+text.reviews.send.message = Nachricht senden!
+radio.reviews.client=Klient
+text.reviewlist.id = id
+text.reviewslist.name = Name
+text.reg.rev= Bewertung schreiben
+text.reg.rev.id = id
+text.reg.rev.message = Botschaft
+bt.reg.rev.add = Eine Rezension hinterlassen!
+table.client.text.help.leave.review = Um eine Bewertung einem Trainer zu \u00fcberlassen, m\u00fcssen Sie seine (ihre) ID angeben, eine Bewertung schreiben und senden. Sie k\u00f6nnen die ID des Trainers kl\u00e4ren, indem Sie auf die Registerkarte unter "Zur Liste der Trainer gehen" klicken.
+text.reg.id_help = Geben Sie die ID des Trainers ein, \u00fcber den Sie eine Bewertung abgeben m\u00f6chten. (Wenn Sie in Ihrem Namen Feedback hinterlassen m\u00f6chten, geben Sie Ihre ID ein.)
+text.reg.message_help = Es kann bis zu 280 Buchstaben, Leerzeichen und Satzzeichen enthalten.
+href.trainer.list.for.review = Gehen Sie zur Liste der Trainer
 ############# Page gallery #############
 text.header.gallery = Galerie
 text.gallery.welcome = Fotogallerie
-text.gallery.slideshow = Dr?cken Sie die Bildschaltertasten
+text.gallery.slideshow = Dr\u00fccken Sie die Bildschaltertasten
+############# Page hall presentation #############
+text.header.hall = Hallenpr\u00e4sentation
+############# Page food #############
+title.food = Fitness Ern\u00e4hrung
+text.header.food = Kompetente Fitness: Ern\u00e4hrung vor und nach dem Training
+text.helper.food = So fangen Sie an, richtig zu essen:
+text.advice.information = Die richtige Ern\u00e4hrung ist eines der Themen, die von gew\u00f6hnlichen Menschen am h\u00e4ufigsten gestellt werden. Eine ausgewogene Ern\u00e4hrung kann Wunder f\u00fcr Ihren K\u00f6rper wirken. Es ist kein Geheimnis, dass Training allein nicht ausreicht, um eine Zahl zu korrigieren. F\u00fcr das Ergebnis m\u00fcssen Sie Ihre Ern\u00e4hrung korrekt \u00fcberpr\u00fcfen.
+text.advice.information1 = 1. Trinken Sie morgens auf n\u00fcchternen Magen ein Glas (Sie k\u00f6nnen 2 Gl\u00e4ser) warmes Wasser.
+text.advice.information2 = 2. Nach 10-15 Minuten fr\u00fchst\u00fccken wir (Fr\u00fchst\u00fcck - R\u00fchrei, Spiegeleier, M\u00fcsli - dies ist eine Energieladung f\u00fcr den ganzen Tag, insbesondere Flachs und Haferflocken). \u00fcberladen des Magens mit Sandwiches, Kuchen wird nicht empfohlen.
+text.advice.information3 = 3. Trinken Sie jedes Mal 10 bis 20 Minuten vor einer Mahlzeit ein Glas Wasser (meistens "fragt" der K\u00f6rper nicht nach Nahrung, sondern nach Wasser). Au\u00dferdem werden wir nach dem Trinken von Wasser den Magen von den Resten befreien die vorherige Mahlzeit).
+text.advice.information4 = 4. Es gibt oft, aber in kleinen Portionen (wir stehen mit einem Gef\u00fchl leichter Unterern\u00e4hrung vom Tisch auf - so wird der Magen allm\u00e4hlich kleiner und "fragt" mit der Zeit weniger).
+text.advice.information5 = 5. Eine Pause zwischen Essen und Snacks f\u00fcr 2-3 Stunden.
+text.advice.information6 = 6. Trinken Sie mit Essen, aber nicht sehr viel. Nach etwa einer Stunde wird empfohlen, viel zu trinken.
+text.advice.information7 = 7. Sie k\u00f6nnen nach 18 Uhr essen! Die letzte Mahlzeit sollte jedoch 2-3 Stunden vor dem Schlafengehen sein.
+text.advice.information8 = 8. F\u00fcgen Sie der Ern\u00e4hrung mehr Gem\u00fcse, Beeren und Obst hinzu (aber reduzieren Sie den Verzehr von s\u00fc\u00dfen und st\u00e4rkehaltigen Lebensmitteln, und es ist besser, sie insgesamt auszuschlie\u00dfen). Iss jeden Tag mindestens 1 Apfel - reinigt den K\u00f6rper von Giftstoffen und Giften.
+text.advice.information9 = 9. Essen Sie 1-2 Stunden vor dem Training (es ist gut, wenn es sich um leicht verdauliche Kohlenhydrate handelt - Getreide - sie geben die Energie, die w\u00e4hrend des Trainings ben\u00f6tigt wird).
+text.advice.information10 = 10. Nach dem Training ist es besser, in einer halben Stunde zu essen, und unmittelbar danach k\u00f6nnen Sie Protein trinken.
+text.advice.information11 = 11. Essen Sie tierisches Eiwei\u00df (zum Mittag- und Abendessen): wei\u00dfes Fleisch - Gefl\u00fcgel, Meeresfr\u00fcchte: leicht gesalzener Fisch, gebacken oder ged\u00e4mpft (aber nicht gebraten oder ger\u00e4uchert), H\u00fchnereier. Schweinefleisch ist unerw\u00fcnscht, weil es \u00f6lig ist.
+text.advice.information12 = 12. Essen Sie pflanzliches Eiwei\u00df: Bohnen, Erbsen, Bohnen, N\u00fcsse.
+text.advice.information13 = 13. Essen Sie Fette: Milchprodukte (es ist besser, wenn sie Landwirte sind), Pflanzen\u00f6le (die n\u00fctzlichsten - Leinsamen) sowie Senf, Hanf, Sesam, Zeder, Mais, Soja, Oliven, Gem\u00fcse (nicht raffiniert) und andere \u00f6le. F\u00fcgen Sie diese \u00f6le zu Salaten anstelle von Mayonnaise hinzu. Das Lagern von \u00f6l im K\u00fchlschrank ist unerw\u00fcnscht (au\u00dfer Leinsamen).
+text.advice.information14 = 14. Essen Sie Kohlenhydrate: Getreide, Nudeln (aus Hartweizen), Kakao, Chicor\u00e9e, Honig.
+text.advice.information15 = 15. Es ist unerw\u00fcnscht, Suppe und das Hauptgericht hintereinander zu essen. Es ist besser, es in zwei Mahlzeiten aufzuteilen.
+text.advice.information16 = 16. Essen Sie gekochte, ged\u00fcnstete, ged\u00e4mpfte, gebackene oder gegrillte Speisen. Das Dienstprogramm bleibt auf diese Weise besser erhalten.
+text.advice.information17 = 17. Trinken Sie 1,5-2 Liter pro Tag. Wasser (besser gefiltert).
+text.advice.information18 = 18. Missbrauche keinen Kaffee (Nachteile: Es erlaubt nicht, dass das Protein absorbiert wird, "pflanzliche" Sicht und Herz, Z\u00e4hne werden gelb). Sie k\u00f6nnen durch nat\u00fcrlichen Kakao, Chicor\u00e9e (\u00e4hnlich wie Kaffee, aber ges\u00fcnder) ersetzen.
+text.advice.information19 = 19. Bei Erk\u00e4ltungen, akuten Infektionen der Atemwege und akuten Virusinfektionen der Atemwege gibt es Fr\u00fcchte mit Vitamin C: Schwarze Johannisbeere, Kiwi, Zitrusfr\u00fcchte und trinken Sie so viel Fl\u00fcssigkeit wie m\u00f6glich. F\u00fcr die Immunit\u00e4t: Echinacea, Dachsfett in Kapseln, Mama. Trinken Sie nach M\u00f6glichkeit keine Antibiotika (schw\u00e4cht die Immunit\u00e4t, Funktionsst\u00f6rungen des Magens und des Darms).
+text.advice.information20 = 20. Essen oder trinken Sie nicht (besonders hei\u00df) von Einweg-Plastikutensilien - es werden Gifte freigesetzt.
+text.advice.information21 = 21. Kombinieren Sie nach M\u00f6glichkeit keine Proteine mit vielen einfachen Kohlenhydraten: Fleisch und Brot, Kn\u00f6del.
+text.advice.information22 = 22. Um zu minimieren, und es ist besser, S\u00fc\u00dfwaren vollst\u00e4ndig auszuschlie\u00dfen - Geb\u00e4ck, Kondensmilch, S\u00fc\u00dfigkeiten. Wenn Sie sich f\u00fcr S\u00fc\u00dfigkeiten interessieren, essen Sie Obst oder etwas Honig.
+text.advice.information23 = 23. Die sch\u00e4dlichsten Produkte: Wurst, Mayonnaise, Ketchup und alle Arten von Saucen, Soda, Pommes und Cracker, Fast Food, S\u00fc\u00dfigkeiten, Eis.
